// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scrollable.svelte > should render 1`] = `
<div>
  <div
    class="svelte-9md5tb"
    data-scrollable-root=""
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Scrollable.svelte > should render 2`] = `
<div>
  <div
    class="custom-class svelte-9md5tb"
    data-scrollable-root=""
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;
